<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <TextView
        android:id="@+id/overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="4dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/overview_text"
        android:textColor="@color/white_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview">

        <androidx.cardview.widget.CardView
            android:id="@+id/poster_card"
            android:layout_width="180dp"
            android:layout_height="255dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/colorPrimary">

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:contentDescription="@string/poster_content_txt"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/default_image_placeholder" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/genre_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/poster_card"
            android:textColor="@color/white_color"
            tools:text="Sci-fiction" />


        <TextView
            android:id="@+id/release_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/genre_text"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/poster_card"
            android:fontFamily="serif"
            android:text="@string/release_date_txt"
            android:textColor="@color/white_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/release_date_title"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/poster_card"
            android:textAlignment="center"
            android:textColor="@color/white_color" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/release_date"
            android:layout_marginStart="42dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/poster_card"
            android:textColor="@color/white_color"
            android:textSize="24sp"
            tools:text="0.0" />

        <TextView
            android:id="@+id/rating_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/release_date"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/rating"
            android:text="@string/rating_total_text"
            android:textColor="@color/white_color"
            android:textSize="24sp" />

        <Button
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rating_total"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="52dp"
            android:layout_toEndOf="@+id/poster_card"
            android:background="@drawable/button_background"
            android:drawableStart="@drawable/ic_baseline_share_24"
            android:padding="8dp"
            android:text="@string/share_btn_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <TextView
        android:id="@+id/trailers_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/headers_background"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/trailers_heading_txt"
        android:textColor="@android:color/primary_text_dark_nodisable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <FrameLayout
        android:id="@+id/trailers_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trailers_heading">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trailers_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <TextView
        android:id="@+id/more_images_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/headers_background"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/more_images_txt"
        android:textColor="@android:color/primary_text_dark_nodisable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trailers_layout" />

    <FrameLayout
        android:id="@+id/more_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/more_images_heading">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/more_images_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <TextView
        android:id="@+id/cast_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/headers_background"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/cast_heading_txt"
        android:textColor="@android:color/primary_text_dark_nodisable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/more_image_layout" />

    <FrameLayout
        android:id="@+id/cast_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cast_heading">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cast_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>